<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->




        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:id="@+id/imageView2"
            android:src="@drawable/vedas1"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="About"
            android:background="#FFA726"
            android:textColor="#fff"
            android:id="@+id/button"
            android:padding="5dp"
            android:layout_below="@+id/buttonLearnVedas"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:padding="5dp"
            android:lineSpacingExtra="3dp"
            android:textSize="15dp"
            android:textColor="#573706"
            android:text="@string/about_veda"
            android:id="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Origin"
            android:layout_margin="5dp"
            android:background="#FFA726"
            android:textColor="#fff"
            android:id="@+id/button2"
            android:padding="5dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:padding="5dp"
            android:lineSpacingExtra="3dp"
            android:textSize="15dp"
            android:textColor="#573706"
            android:text="@string/origin"
            android:id="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Classification"
            android:layout_margin="5dp"
            android:background="#FFA726"
            android:textColor="#fff"
            android:id="@+id/button3"
            android:padding="5dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:padding="5dp"
            android:lineSpacingExtra="3dp"
            android:textSize="15dp"
            android:textColor="#573706"
            android:text="@string/classification"
            android:id="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Components"
            android:layout_margin="5dp"
            android:background="#FFA726"
            android:textColor="#fff"
            android:id="@+id/button4"
            android:padding="5dp"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:padding="5dp"
            android:lineSpacingExtra="3dp"
            android:textSize="15dp"
            android:textColor="#573706"
            android:text="@string/components"
            android:id="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button4" />

    </LinearLayout>
</ScrollView>