<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_Main"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:id="@+id/imageView2"
            android:src="@drawable/simhan_final"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Lineage"
            android:background="@drawable/gradient"
            android:textColor="#000"
            android:id="@+id/button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:padding="5dp"
            android:lineSpacingExtra="3dp"
            android:textSize="15sp"
            android:textColor="@color/Text_Main"

            android:text="@string/profile"
            android:id="@+id/textView2" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/paternal_grandparents"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Paternal Grandparents \nSmt.Aandal and Sri.S.Seshaadri Iyengar"
            android:layout_margin="5dp"
            android:background="@drawable/gradient"
            android:textColor="#000"

            android:id="@+id/button8"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/maternal_grandparents"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Maternal Grandparents \nSmt.Pushpavalli and Sri.T.E.Krishnamachariar"
            android:layout_margin="5dp"
            android:background="@drawable/gradient"
            android:textColor="#000"
            android:id="@+id/button9"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/parents"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Parents \nSmt.Kanakavalli and Sri.S.Raaghavan"
            android:layout_margin="5dp"
            android:background="@drawable/gradient"
            android:textColor="#000"
            android:id="@+id/button10"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#dedede"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Career"
            android:layout_margin="5dp"
            android:background="@drawable/gradient"
            android:textColor="#000"
            android:id="@+id/button2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:padding="5dp"
            android:lineSpacingExtra="3dp"
            android:textSize="15sp"
            android:textColor="@color/Text_Main"
            android:text="@string/career"
            android:id="@+id/textView3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/imageView3"
            android:src="@drawable/guru1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Vid Sri.H. Srinivasaachar"
            android:layout_margin="5dp"
            android:background="@drawable/gradient"
            android:textColor="#000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:id="@+id/imageView4"
            android:src="@drawable/sheshadri_vaadhyar" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Vid Sri.T.A.Sheshadri"
            android:layout_margin="5dp"
            android:background="@drawable/gradient"
            android:textColor="#000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            android:id="@+id/imageView5"
            android:src="@drawable/paramguru" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Vid. Prof.  R K Srikantakumaraswamy"
            android:layout_margin="5dp"
            android:background="@drawable/gradient"
            android:textColor="#000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#dedede"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Vidwan's Forewords"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/gradient"
            android:textColor="#000"
            android:id="@+id/button3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:lineSpacingExtra="3dp"
            android:textSize="15sp"
            android:textColor="@color/Text_Main"
            android:text="@string/dedication"
            android:id="@+id/textView4" />

    </LinearLayout>
</ScrollView>